2012-02-23  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/FileFormatToolbox/scinrrd_save.m (v0.3.1):

	- Fix bug. nrrd.axis.min points to the _corner_ of the first
	voxel, whereas MetaImage's format Offset label referes to the
	_centre_ of the first voxel. Now we are passing the correct offset
	value by adding half the voxel size to nrrd.axis.min.

	* matlab/FileFormatToolbox/writemetaimagefile.m (v0.1.2):

	- Fix bug. Spacing and offset values were saved as a fixed-length
	float with 6 decimal places. But microscopy images often have
	spacing or offsets that can be smaller than that precision, so
	they were being truncated to 0.000000. Now we use an exponential
	format with 12 decimal places (e.g. -2.197265685380e-07), which
	solves that problem.

2012-02-16  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/FiltersToolbox/typicalpsf.m (v0.2.0):

	- Change input argument thr, so that now they represent quantile
	values. This works better in terms of masking out the background
	of the image.

	- Add input argument minsz, a scalar with the minimum size of a
	bead connected component in voxels. Smaller components will be
	considered noise.

	* matlab/FileFormatToolbox/scinrrd_tiff2nrrd.m (v0.2.4):

	- Don't scale intensity values. This was a very bad idea. A load
	function should not invisibly change intensity values.

2012-02-09  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/FiltersToolbox/skeleton_label.m (v0.15.3):

	- If we have no skeleton voxels, don't waste time processing.

	* matlab/FiltersToolbox/scinrrd_skeleton_prune.m (v0.4.1):

	- If we have no voxels to prune, don't waste time processing.

	* matlab/FileFormatToolbox/scinrrd_tiff2nrrd.m (v0.2.3):

	- If data was read by microscope as 12-bit, scale intensities so
	that they cover the whole 16-bit range.

2012-01-28  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/FileFormatToolbox/scinrrd_seg3d2matlab.m (v0.1.1):

	- Fix bug. The function crashed if the scinrrd struct didn't